<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">学习一点通(学生端)</string>
    <!--    学习一点通(学生端)，学习一点通(教师端)-->
    <!--    课堂互动的两个端叫：课堂一点通，授课一点通-->
    <string name="app_edition">STUDENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_user_info">账号信息</string>
    <string name="f_about_us">关于我们</string>
    <string name="f_detect_update">检测更新</string>
    <string name="f_update_psw">修改密码</string>
    <string name="f_elective_center">选科中心</string>
    <string name="f_exit">退出当前账号</string>
    <string name="f_old_psw">原密码</string>
    <string name="f_new_psw1">新密码</string>
    <string name="f_new_psw2">确认密码</string>
    <string name="f_hint_old">请输入原密码</string>
    <string name="f_hint_new1">请输入新密码</string>
    <string name="f_hint_new2">请确认新密码</string>
    <string name="f_cancel">取 消</string>
    <string name="f_confirm">确认修改</string>
    <string name="f_danxuan">单项选择题</string>
    <string name="f_panduan">判断题</string>
    <string name="f_duoxuan">多项选择题</string>
    <string name="f_paizhao">拍 照</string>
    <string name="f_xiangce">从相册中选择</string>
    <string name="f_select">高考选科</string>
    <string name="f_answer">请选择答案：</string>
    <string name="f_submit">提交答案</string>
    <string name="f_analysis">【解析】</string>
    <string name="f_explanation">考点讲解</string>
    <string name="f_notice">发布通知</string>
    <string name="f_announcement">发布公告</string>
    <string name="f_title">日期选择</string>
    <string name="f_title2">日期选择</string>
    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="confirm_1">确认提交</string>
    <string name="turn_on_flashlight">打开闪光灯</string>
    <string name="turn_off_flashlight">关闭闪光灯</string>

    <!--wen-->
    <string name="content">目录</string>
    <string name="login_pw_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_account_hint">请输入用户名</string>
    <string name="home">首页</string>
    <string name="study">学习</string>
    <string name="online_course">线上课程</string>
    <string name="error_book">错题本</string>
    <string name="my">我的</string>
    <string name="plan_homework">学案/作业</string>
    <string name="search">搜索</string>
    <string name="yuwen">语文</string>
    <string name="yingyu">英语</string>
    <string name="shuxue">数学</string>
    <string name="other">其他</string>
    <string name="shengwu">生物</string>
    <string name="huaxue">化学</string>
    <string name="wuli">物理</string>
    <string name="cloze">完型填空题</string>
    <string name="translation">翻译题</string>
    <string name="delete">删除</string>
    <string name="answer_hint">请输入答案</string>
    <string name="save">保存</string>
    <string name="ip_hint">请输入IP地址</string>
    <string name="connect">连接</string>
    <string name="all">全部</string>
    <string name="homework">作业</string>
    <string name="guide_plan">导学案</string>
    <string name="micro_class">微课</string>
    <string name="notice">通知</string>
    <string name="announcement">公告</string>
    <string name="live_news">直播课消息</string>
    <string name="loading">正在加载...</string>
    <string name="homework_submit">交作业</string>
    <string name="clear">清除</string>
    <string name="submit">确定</string>
    <string name="standard_answer">[参考答案]</string>
    <string name="stu_answer">[你的答案]</string>
    <string name="analysis">[解析]</string>
    <string name="latest">最新</string>
    <string name="statistical_report">统计报告</string>
    <string name="teaching_content">教学内容</string>
    <string name="notice_announcement">通知公告</string>
    <string name="hint_t_latest">请输入您想搜索的内容</string>
    <string name="test_paper">试卷</string>
    <string name="teach_package">授课包</string>
    <string name="classroom_teaching">课堂授课</string>
    <string name="teacher_student_interaction">师生互动</string>
    <string name="assign_homework">布置作业</string>
    <string name="mark_exam">批阅试题</string>
    <string name="t_homework_search_hit">学生姓名</string>
    <string name="watch_report">查看报告</string>
    <string name="answer">[答案]</string>
    <string name="title_activity_tlive_add">TLiveAddActivity</string>
    <string name="submit_learnplan">交导学案</string>
    <string name="live_search_input_hint">请输入课程名称，教师名称或课堂号搜索</string>
    <string name="live_add_ketang_name">课堂名称:</string>
    <string name="live_add_start_time">开课时间:</string>
    <string name="live_add_time_length">课节时长:</string>
    <string name="live_add_ketang_type">课堂类型:</string>
    <string name="live_add_subject">学科:</string>
    <string name="live_add_select_ketang">选择我的课堂:</string>
    <string name="live_add_select_group">选择协作组:</string>
    <string name="please_select_with_dash">————请选择————</string>
    <string name="my_ketang">自己的课堂</string>
    <string name="group_ketang">协作组的课堂</string>
    <string name="live_add_ketang_name_hint">请输入课堂名称</string>
    <string name="_00_hour">00小时</string>
    <string name="_00_minute">00分钟</string>
    <string name="_01_hour">01小时</string>
    <string name="_02_hour">02小时</string>
    <string name="_03_hour">03小时</string>
    <string name="_04_hour">04小时</string>
    <string name="_05_hour">05小时</string>
    <string name="_06_hour">06小时</string>
    <string name="_07_hour">07小时</string>
    <string name="_08_hour">08小时</string>
    <string name="_09_hour">09小时</string>
    <string name="_10_hour">10小时</string>
    <string name="_11_hour">11小时</string>
    <string name="_12_hour">12小时</string>
    <string name="_10_minute">10分钟</string>
    <string name="_20_minute">20分钟</string>
    <string name="_30_minute">30分钟</string>
    <string name="_40_minute">40分钟</string>
    <string name="_50_minute">50分钟</string>
    <string name="set_learn_plan_params">设置导学案属性</string>
    <string name="add_teach_package">创建授课包</string>
    <string name="add_assign_learn_plan">创建导学案+布置</string>
    <string name="add_assign_wike">创建微课+布置</string>
    <string name="add_assign_homework">创建作业+布置</string>
    <string name="add_camera_homework">拍照布置作业</string>
    <string name="set_weike_params">设置微课属性</string>
    <string name="set_package_params">设置授课包属性</string>
    <string name="introduction">简介: \n北京智佳成立于1993年，是国家认定的高新技术企业和双软企业。公司自成立以来始终专注于教育软件、教学资源的研发和服务，长期引领中国教育信息化的技术发展方向。旗下\"一点通\"系列教育软件曾获得教育部、文化部、信息产业部、科技部和国家新闻出版总署的多次奖励，客户遍布20多个省市的大中小学。进入21世纪，智佳以云计算和互联网技术为依托，全力打造\"中国教育知识服务云\"平台，该平台被列为国家火炬计划项目，获得科技部、北京市科委、中关村园区等多部门的资金支持，并在河南、山西等省市获得规模应用。公司已取得计算机软件著作权证书114项、软件产品证书9项，并拥有\"9月1号\" \"淘卷\" \"一点通\" \"点点通\"等注册商标。</string>
    <!--wen-->
    <string name="xueba_answer">[学霸答案]</string>

</resources>