<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_select_bg"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle">
        <!--分割线显示要设置showDividers和divider两个属性才行-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/all"
            android:textColor="#1E2D47" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/homework"
            android:textColor="#1E2D47" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/guide_plan"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/micro_class"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/notice"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/announcement"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>