<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/search_select_bg"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:padding="2dp"
        android:showDividers="middle">
        <!--分割线显示要设置showDividers和divider两个属性才行-->

        <TextView
            android:id="@+id/tv_add_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/add_teach_package"
            android:textColor="@color/gray_text" />


        <TextView
            android:id="@+id/tv_add_learnPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/add_assign_learn_plan"
            android:textColor="@color/gray_text" />

        <TextView
            android:id="@+id/tv_add_weike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/add_assign_wike"
            android:textColor="@color/gray_text" />

        <TextView
            android:id="@+id/tv_add_homework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/add_assign_homework"
            android:textColor="@color/gray_text" />

        <TextView
            android:id="@+id/tv_camera_homework"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_select_item_bg"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:text="@string/add_camera_homework"
            android:textColor="@color/gray_text" />
    </LinearLayout>
</LinearLayout>