<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/f_cancel"
            android:textColor="@color/f_blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/f_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
           android:text="下一步"
            android:textColor="@color/f_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- 分割线 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray2"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp">

        <com.example.yidiantong.View.PickerView
            android:id="@+id/dpv_year"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textSize="@dimen/date_unit_text_size" />

        <com.example.yidiantong.View.PickerView
            android:id="@+id/dpv_month"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/black"
            android:textSize="@dimen/date_unit_text_size" />

        <com.example.yidiantong.View.PickerView
            android:id="@+id/dpv_day"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/black"
            android:textSize="@dimen/date_unit_text_size" />



    </LinearLayout>

</LinearLayout>